--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -27,7 +27,7 @@
                     <span class="amount">$0</span>
                     <span class="period">/month</span>
                 </div>
-                <h3 class="description">Perfect for occasional document review</h3>
+                <p class="description">Perfect for occasional document review</p>
             </div>
             
             <div class="features">
@@ -61,7 +61,7 @@
                     <span class="amount">$9.99</span>
                     <span class="period">/month</span>
                 </div>
-                <h3 class="description">Unlimited analysis with advanced features</h3>
+                <p class="description">Unlimited analysis with advanced features</p>
             </div>
             
             <div class="features">
