--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -111,9 +111,22 @@
 
 <script>
 function logout() {
+    // Get user ID before clearing
+    const userId = localStorage.getItem('fineprint_user_id');
+    
+    // Clear all analysis data for this user
+    if (userId) {
+        localStorage.removeItem(`temp_analysis_${userId}`);
+    }
+    
+    // Clear visitor analysis
+    localStorage.removeItem('pending_visitor_analysis');
+    
+    // Clear authentication data
     localStorage.removeItem('access_token');
     localStorage.removeItem('fineprint_user_id');
     document.cookie = 'access_token=; path=/; expires=Thu, 01 Jan 1970 00:00:00 GMT';
+    
     window.location.href = '/';
 }
 </script>
